--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -5,7 +5,15 @@ authors = ["Cengizhan Paşaoğlu <cengizhanpasaoglu@gmail.com>"]
 
 [dependencies]
 rand = "0.4"
+serde = "1.0"
+serde_derive = "1.0"
+serde_json = "1.0"
+
 
 [[bin]]
 name = "trivia"
 path = "src/main.rs"
+
+[[bin]]
+name = "generate-golden-master"
+path = "src/generate_golden_master.rs"
