--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -9,6 +9,9 @@ serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 
+[lib]
+name = "trivia"
+path = "src/trivia.rs"
 
 [[bin]]
 name = "trivia"
