--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -11,12 +11,12 @@ serde_json = "1.0"
 
 [lib]
 name = "trivia"
-path = "src/trivia.rs"
+path = "src/lib.rs"
 
 [[bin]]
 name = "trivia"
-path = "src/main.rs"
+path = "src/bin/main.rs"
 
 [[bin]]
 name = "generate-golden-master"
-path = "src/generate_golden_master.rs"
+path = "src/bin/generate_golden_master.rs"
